Fix converted key format

--- a/src/input/converted_test.bib
+++ b/src/input/converted_test.bib
@@ -2,7 +2,7 @@
 % See https://github.com/aralsea/note
 
 
-@book{hartshorne1977algebraic,
+@book{book_hartshorne_1977_algebraic_geometry,
 	author = {Hartshorne, Robin},
 	title = {Algebraic geometry},
 	series = {Graduate Texts in Mathematics},
@@ -17,7 +17,7 @@
 }
 
 
-@book{boschlutkebohmertraynaud1990neronmodels,
+@book{book_bosch_lutkebohmert_raynaud_1990_neron_models,
 	author = {Bosch, Siegfried and L\"{u}tkebohmert, Werner and Raynaud,
                 Michel},
 	title = {N\'{e}ron models},
@@ -36,7 +36,7 @@
 }
 
 
-@article{lopezmartintejeroprieto2017derived,
+@article{lopez_tejero_2017_derived_equivalences_and_kodaira_fibers,
 	author = {L\'{o}pez Mart\'{\i}n, Ana Cristina and Tejero Prieto, Carlos},
 	title = {Derived equivalences and {K}odaira fibers},
 	journal = {J. Geom. Phys.},
@@ -53,7 +53,7 @@
 }
 
 
-@misc{arai2024halfspherical,
+@misc{preprint_hayato_2024_halfspherical_twists_on_derived_categories_of_coherent_sheaves,
 	title = {Half-spherical twists on derived categories of coherent sheaves},
 	author = {Hayato Arai},
 	year = {2024},
@@ -63,7 +63,7 @@
 }
 
 
-@book{liu2002algebraic,
+@book{book_liu_2002_algebraic_geometry_and_arithmetic_curves,
 	author = {Liu, Qing},
 	title = {Algebraic geometry and arithmetic curves},
 	series = {Oxford Graduate Texts in Mathematics},
@@ -80,7 +80,7 @@
 }
 
 
-@book{huybrechts2006fouriermukai,
+@book{book_huybrechts_2006_fouriermukai_transforms_in_algebraic_geometry,
 	author = {Huybrechts, D.},
 	title = {Fourier-{M}ukai transforms in algebraic geometry},
 	series = {Oxford Mathematical Monographs},
@@ -96,7 +96,7 @@
 }
 
 
-@misc{stacks-project,
+@misc{preprint_the_2024_the_stacks_project,
 	author = {The {Stacks project authors}},
 	title = {The Stacks project},
 	howpublished = {\url{https://stacks.math.columbia.edu}},
@@ -104,7 +104,7 @@
 }
 
 
-@article{ishiiuehara2005autoequivalences,
+@article{ishii_uehara_2005_autoequivalences_of_derived_categories_on_the_minimal_resolutions_of_ansingularities_on_surfaces,
 	author = {Ishii, Akira and Uehara, Hokuto},
 	title = {Autoequivalences of derived categories on the minimal
                 resolutions of {$A_n$}-singularities on surfaces},
@@ -122,7 +122,7 @@
 }
 
 
-@article{lekilipolishchuker2017arithmetic,
+@article{lekili_polishchuk_2017_arithmetic_mirror_symmetry_for_genus_1_curves_with_n_marked_points,
 	author = {Lekili, Yank{\i} and Polishchuk, Alexander},
 	title = {Arithmetic mirror symmetry for genus 1 curves with {$n$}
                 marked points},
@@ -141,7 +141,7 @@
 }
 
 
-@article{seidelthomas2001braidgroup,
+@article{seidel_thomas_2001_braid_group_actions_on_derived_categories_of_coherent_sheaves,
 	author = {Seidel, Paul and Thomas, Richard},
 	title = {Braid group actions on derived categories of coherent sheaves},
 	journal = {Duke Math. J.},
@@ -159,7 +159,7 @@
 }
 
 
-@article{khovanovseidel2002quivers,
+@article{khovanov_seidel_2002_quivers_floer_cohomology_and_braid_group_actions,
 	author = {Khovanov, Mikhail and Seidel, Paul},
 	title = {Quivers, {F}loer cohomology, and braid group actions},
 	journal = {J. Amer. Math. Soc.},
@@ -177,7 +177,7 @@
 }
 
 
-@article{bravthomas2011braidgroups,
+@article{brav_thomas_2011_braid_groups_and_kleinian_singularities,
 	author = {Brav, Christopher and Thomas, Hugh},
 	title = {Braid groups and {K}leinian singularities},
 	journal = {Math. Ann.},
@@ -195,7 +195,7 @@
 }
 
 
-@article{ishiiuedauehara2010stability,
+@article{ishii_ueda_uehara_2010_stability_conditions_on_ansingularities,
 	author = {Ishii, Akira and Ueda, Kazushi and Uehara, Hokuto},
 	title = {Stability conditions on {$A_n$}-singularities},
 	journal = {J. Differential Geom.},
@@ -213,7 +213,7 @@
 }
 
 
-@article{bridgel2009stability,
+@article{bridgeland_2009_stability_conditions_and_kleinian_singularities,
 	author = {Bridgeland, Tom},
 	title = {Stability conditions and {K}leinian singularities},
 	journal = {Int. Math. Res. Not. IMRN},
@@ -230,7 +230,7 @@
 }
 
 
-@article{bezrukavnikovriche2012affinebraid,
+@article{bezrukavnikov_riche_2012_affine_braid_group_actions_on_derived_categories_of_springer_resolutions,
 	author = {Bezrukavnikov, Roman and Riche, Simon},
 	title = {Affine braid group actions on derived categories of {S}pringer
               resolutions},
@@ -249,7 +249,7 @@
 }
 
 
-@article{gadbledthielwagner2017categorical,
+@article{gadbled_thiel_wagner_2017_categorical_action_of_the_extended_braid_group_of_affine_type_a,
 	author = {Gadbled, Agn\`es and Thiel, Anne-Laure and Wagner, Emmanuel},
 	title = {Categorical action of the extended braid group of affine type
                 {$A$}},
@@ -268,7 +268,7 @@
 }
 
 
-@incollection{romagny2013modelsof,
+@incollection{romagny_2013_models_of_curves,
 	author = {Romagny, Matthieu},
 	title = {Models of curves},
 	booktitle = {Arithmetic and geometry around {G}alois theory},
@@ -286,7 +286,7 @@
 }
 
 
-@book{macdonald2003affinehecke,
+@book{book_macdonald_2003_affine_hecke_algebras_and_orthogonal_polynomials,
 	author = {Macdonald, I. G.},
 	title = {Affine {H}ecke algebras and orthogonal polynomials},
 	series = {Cambridge Tracts in Mathematics},
@@ -303,7 +303,7 @@
 }
 
 
-@incollection{haiman2006cherednik,
+@incollection{haiman_2006_cherednik_algebras_macdonald_polynomials_and_combinatorics,
 	author = {Haiman, Mark},
 	title = {Cherednik algebras, {M}acdonald polynomials and combinatorics},
 	booktitle = {International {C}ongress of {M}athematicians. {V}ol. {III}},
@@ -317,7 +317,7 @@
 }
 
 
-@book{cherednik2005doubleaffine,
+@book{book_cherednik_2005_double_affine_hecke_algebras,
 	author = {Cherednik, Ivan},
 	title = {Double affine {H}ecke algebras},
 	series = {London Mathematical Society Lecture Note Series},
@@ -333,7 +333,7 @@
 }
 
 
-@article{jordan2009quantum,
+@article{jordan_2009_quantum_dmodules_elliptic_braid_groups_and_double_affine_hecke_algebras,
 	author = {Jordan, David},
 	title = {Quantum {$D$}-modules, elliptic braid groups, and double
                 affine {H}ecke algebras},
@@ -351,7 +351,7 @@
 }
 
 
-@misc{barbacovi2022spherical,
+@misc{preprint_federico_kohei_2022_spherical_twists_relations_and_the_center_of_autoequivalence_groups_of_k3_surfaces,
 	title = {Spherical twists, relations and the center of autoequivalence groups of K3 surfaces},
 	author = {Federico Barbacovi and Kohei Kikuta},
 	year = {2022},
@@ -361,7 +361,7 @@
 }
 
 
-@misc{evans2023noncommutative,
+@misc{preprint_jonathan_yanki_2023_noncommutative_crepant_resolutions_of_can_singularities_via_fukaya_categories,
 	title = {Noncommutative crepant resolutions of $cA_n$ singularities via Fukaya categories},
 	author = {Jonathan David Evans and Yanki Lekili},
 	year = {2023},
@@ -371,7 +371,7 @@
 }
 
 
-@misc{opper2023spherical,
+@misc{preprint_sebastian_2023_spherical_objects_transitivity_and_autoequivalences_of_kodaira_cycles_via_gentle_algebras,
 	title = {Spherical objects, transitivity and auto-equivalences of Kodaira cycles via gentle algebras},
 	author = {Sebastian Opper},
 	year = {2023},
@@ -381,7 +381,7 @@
 }
 
 
-@book{bourbaki1968elements,
+@book{book_bourbaki_1968_elements_de_mathematique_fasc_xxxiv_groupes_et_algebres_de_lie_chapitre_iv_groupes_de_coxeter_et_systemes_de_tits_chapitre_v_groupes_engendres_par_des_reflexions_chapitre_vi_systemes_de_racines,
 	author = {Bourbaki, N.},
 	title = {\'{E}l\'{e}ments de math\'{e}matique. {F}asc. {XXXIV}.
                 {G}roupes et alg\`ebres de {L}ie. {C}hapitre {IV}: {G}roupes
@@ -400,7 +400,7 @@
 }
 
 
-@article{riche2008geometric,
+@article{riche_2008_geometric_braid_group_action_on_derived_categories_of_coherent_sheaves,
 	author = {Riche, Simon},
 	title = {Geometric braid group action on derived categories of coherent
               sheaves},
@@ -419,7 +419,7 @@
 }
 
 
-@article{deligne1997actiondu,
+@article{deligne_1997_action_du_groupe_des_tresses_sur_une_categorie,
 	author = {Deligne, P.},
 	title = {Action du groupe des tresses sur une cat\'{e}gorie},
 	journal = {Invent. Math.},
@@ -437,7 +437,7 @@
 }
 
 
-@article{donovansegal2015mixedbraid,
+@article{donovan_segal_2015_mixed_braid_group_actions_from_deformations_of_surface_singularities,
 	author = {Donovan, Will and Segal, Ed},
 	title = {Mixed braid group actions from deformations of surface
                 singularities},
@@ -456,7 +456,7 @@
 }
 
 
-@book{fulton1998intersection,
+@book{book_fulton_1998_intersection_theory,
 	author = {Fulton, William},
 	title = {Intersection theory},
 	series = {Ergebnisse der Mathematik und ihrer Grenzgebiete. 3. Folge. A
@@ -476,7 +476,7 @@
 }
 
 
-@incollection{schuttshioda2010elliptic,
+@incollection{schutt_shioda_2010_elliptic_surfaces,
 	author = {Sch\"{u}tt, Matthias and Shioda, Tetsuji},
 	title = {Elliptic surfaces},
 	booktitle = {Algebraic geometry in {E}ast {A}sia---{S}eoul 2008},
@@ -494,7 +494,7 @@
 }
 
 
-@article{shioda1972onelliptic,
+@article{shioda_1972_on_elliptic_modular_surfaces,
 	author = {Shioda, Tetsuji},
 	title = {On elliptic modular surfaces},
 	journal = {J. Math. Soc. Japan},
