--- a/src/input/expected_hartshorne.bib
+++ b/src/input/expected_hartshorne.bib
@@ -1,4 +1,4 @@
-@book{hartshorne1977algebraic,
+@book{hartshorne1977algebraic_geometry,
   author     = {Hartshorne, Robin},
   title      = {Algebraic geometry},
   series     = {Graduate Texts in Mathematics},
